--- a/app/views/pages/distributor.html.erb
+++ b/app/views/pages/distributor.html.erb
@@ -77,7 +77,7 @@
             <%= f.input :message, as: :text, label: false, placeholder:'Type your message here', input_html: { class: "contact-message" } %>
             <div class="g-recaptcha" style="margin-top: 20px;" data-sitekey="6Leq5_IUAAAAABljypFOmp3MNhP-UOUDLzmEkGy3
 " data-callback="enableBtn"></div>
-            <%= f.button :button, 'Submit', type: :submit,  class: "contact-form-button", id: "button1", disabled: true %>
+            <%= f.button :button, 'Submit', type: :submit,  class: "contact-form-button mt20", id: "button1", disabled: true %>
           <% end %>
         </div>
         <div class="distributor-interested" data-aos="fade-up" data-aos-duration="2000">
@@ -111,7 +111,7 @@
         <%= f.input :message, as: :text, label: false, placeholder:'type your message here', input_html: { class: "contact-message" } %>
         <div class="g-recaptcha" style="margin-top: 20px;" data-sitekey="6Leq5_IUAAAAABljypFOmp3MNhP-UOUDLzmEkGy3
         " data-callback="enableBtn"></div>
-        <%= f.button :button, 'Submit', type: :submit,  class: "contact-form-button", id: "button1", disabled: true %>
+        <%= f.button :button, 'Submit', type: :submit,  class: "contact-form-button mt20", id: "button1", disabled: true %>
       <% end %>
     </div>
   </div>
