--- a/app/views/pages/fxone_remote.html.erb
+++ b/app/views/pages/fxone_remote.html.erb
@@ -15,9 +15,11 @@
           <i class="fas fa-play orange"></i>
           <p><%= t("home.play") %></p>
         </div>
-        <div class="download-btn">
-          <p><%= t("home.download") %></p>
-        </div>
+        <%= link_to "/fxone_remote_brochure.pdf", target: "_blank", class: "nodec" do %>
+          <div class="download-btn">
+            <p><%= t("home.download") %></p>
+          </div>
+        <% end %>
       </div>
     </div>
   </div>
