added in alt image tags and changed copy to FX ONE

--- a/app/views/pages/cost_of_ownership.html.erb
+++ b/app/views/pages/cost_of_ownership.html.erb
@@ -1,6 +1,6 @@
 <% content_for :meta_title, "#{t('seo.cost_of_ownership.title')}" %>
 <% content_for :meta_description, "#{t('seo.cost_of_ownership.description')}" %>
-<% content_for :meta_image, cl_image_path("Piggy_1_al3kec", width: 400) %>
+<% content_for :meta_image, cl_image_path("Piggy_1_al3kec", width: 400, alt: "FX ONE cost of ownership") %>
 
 <%= cl_image_tag("about-big-pill-sliced_mpxusz.png", :quality=>"auto", class: "ownership-big-pill hide-mobile") %>
 <%= cl_image_tag("about-little-pill-sliced_z6varw.png", :quality=>"auto", class: "ownership-little-pill") %>
@@ -10,7 +10,7 @@
         <h1 class="responsive-header w-100"><%= t("cost_of_ownership.first_section_title") %> <br> <%= t("cost_of_ownership.first_section_sub_title") %> <span><%= cl_image_tag("fxone-logo_zjjdvc.png", class: "fxone-logo-right") %></span></h1>
         <p class="responsive-text-small grey"><%= t("cost_of_ownership.first_section_text") %></p>
       </div>
-      <%= cl_image_tag("Piggy_1_al3kec.png", :quality=>"auto", class: "first-section-image", style: "max-width: 800px;") %>
+      <%= cl_image_tag("Piggy_1_al3kec.png", :quality=>"auto", class: "first-section-image", style: "max-width: 800px;", alt: "FXONE printer costs") %>
   </div>
   <div class="ownership-second-section-wrapper">
     <div data-aos="fade-up" data-aos-duration="2000">
