--- a/app/views/pages/fxone_remote.html.erb
+++ b/app/views/pages/fxone_remote.html.erb
@@ -1,12 +1,12 @@
 <% content_for :meta_title, "#{t('seo.fxone_remote.title')}" %>
 <% content_for :meta_description, "#{t('seo.fxone_standard.description')}" %>
-<% content_for :meta_image, cl_image_path("fxone-remote-graphic-1_rq5ho4.png", width: 400) %>
+<% content_for :meta_image, cl_image_path("fxone-remote-graphic-1_rq5ho4.png", width: 400, alt: "FX ONE remote printer") %>
 
 <div class="fxone-wrapper">
   <%= cl_image_tag("bigpill_dhcpkm.png", :quality=>"auto", class: "fxone-big-pill-remote") %>
   <%= cl_image_tag("inks_little_pill_pahv4x.png", :quality=>"auto", class: "fxone-little-pill") %>
   <div class="first-section fxone-first-section-background first-section-remote" style="padding-bottom: 0px;">
-    <%= cl_image_tag("fxone-remote-graphic-1_rq5ho4.png", class: "first-section-image remote-image", style: "max-width: 800px;") %>
+    <%= cl_image_tag("fxone-remote-graphic-1_rq5ho4.png", class: "first-section-image remote-image", style: "max-width: 800px;", alt: "FX ONE remote printer") %>
     <div class="first-section-text">
       <h1 class="w-100"><span><%= cl_image_tag("fxone-logo_zjjdvc.png", class: "fxone-logo") %></span> <%= t("fxone_remote.first_section_title") %></h1>
       <p class="responsive-text-small grey"><%= t("fxone_remote.first_section_text") %></p>
@@ -161,10 +161,10 @@
       </div>
       <div class="about-section fxone-section mobile-column">
         <div class="about-first-section-left no-padding-mobile">
-          <%= cl_image_tag("lhs_gekkpr.png", :quality=>"auto", class: "about-graphic about-graphic-two") %>
+          <%= cl_image_tag("lhs_gekkpr.png", :quality=>"auto", class: "about-graphic about-graphic-two", alt: "FX ONE remote side view") %>
         </div>
         <div class="about-first-section-right no-padding-mobile">
-          <%= cl_image_tag("rhs_nn9ojt.png", :quality=>"auto", class: "about-graphic about-graphic-two") %>
+          <%= cl_image_tag("rhs_nn9ojt.png", :quality=>"auto", class: "about-graphic about-graphic-two", alt: "FX ONE remote front view") %>
         </div>
       </div>
     </div>
