--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 <% content_for :meta_description, "#{t('seo.home_page.description')}" %>
 <div class="home">
   <div class="first-section" style="overflow-x: unset;">
-    <%= cl_image_tag("Foenix-first-section-svg_ykndwi.png", :quality=>"auto", class: "first-section-svg") %>
+    <%= cl_image_tag("Foenix-first-section-svg_ykndwi.png", :quality=>"auto", class: "first-section-svg"), "The FX ONE printer" %>
     <div class="first-section-text">
       <!-- WEB TITLE -->
       <h1 class="hide-mobile m-0"><%= t("home.title") %></h1>
@@ -17,7 +17,7 @@
         <p><%= t("home.play") %></p>
       </div>
     </div>
-    <%= cl_image_tag("Foenix-machine_iqmh2t.png", class: "first-section-image", style: "max-width: 800px;") %>
+    <%= cl_image_tag("Foenix-machine_iqmh2t.png", class: "first-section-image", style: "max-width: 800px;"), "The FX ONE printer, for all your inudstrial printing needs" %>
   </div>
   <div class="second-section">
     <%= cl_image_tag("Foenix-first-section-svg_ykndwi.png", :quality=>"auto", class: "first-section-svg-2") %>
@@ -74,10 +74,10 @@
     <div class="second-section-three">
       <%= image_tag("square-dots.png", class: "second-section-three_svg") %>
       <div>
-        <%= cl_image_tag("https://res.cloudinary.com/foenix-coding/image/upload/v1579860872/blnk_products_viwmhc.png", :quality=>"auto", class: "second-section-three_image") %>
+        <%= cl_image_tag("https://res.cloudinary.com/foenix-coding/image/upload/v1579860872/blnk_products_viwmhc.png", :quality=>"auto", class: "second-section-three_image", alt: "FX ONE printed commercial goods") %>
       </div>
       <div>
-        <%= cl_image_tag("foenix-tube_zlcerz.png", :quality=>"auto", class: "second-section-three_image") %>
+        <%= cl_image_tag("foenix-tube_zlcerz.png", :quality=>"auto", class: "second-section-three_image", alt: "FX ONE printed pvc piping") %>
       </div>
     </div>
   <div class="fourth-section">
@@ -207,7 +207,7 @@
             <br><br><br><br><br><br><br><br><br>
           </div>
           <div class="tab-image-container">
-            <%= cl_image_tag("https://res.cloudinary.com/foenix-coding/image/upload/v1579895115/tabone_ltvrjb.png", class: "tab-image shadowed") %>
+            <%= cl_image_tag("https://res.cloudinary.com/foenix-coding/image/upload/v1579895115/tabone_ltvrjb.png", class: "tab-image shadowed", alt: "FX ONE software interface") %>
           </div>
         </div>
 
@@ -226,7 +226,7 @@
             <br><br><br><br><br><br><br><br><br>
           </div>
           <div class="tab-image-container">
-            <%= cl_image_tag("https://res.cloudinary.com/foenix-coding/image/upload/v1579895476/image58_cc0ttj.png", class: "tab-image") %>
+            <%= cl_image_tag("https://res.cloudinary.com/foenix-coding/image/upload/v1579895476/image58_cc0ttj.png", class: "tab-image", alt: "FX ONE control pad") %>
           </div>
         </div>
 
@@ -244,7 +244,7 @@
             <br><br><br><br><br><br><br><br><br>
           </div>
           <div class="tab-image-container">
-            <%= cl_image_tag("inks-and-cons_wzglxn.png", class: "tab-image") %>
+            <%= cl_image_tag("inks-and-cons_wzglxn.png", class: "tab-image", alt: "FX ONE printerjet cartridges") %>
           </div>
         </div>
 
@@ -261,7 +261,7 @@
             <br><br><br><br><br><br><br><br><br>
           </div>
           <div class="tab-image-container">
-            <%= cl_image_tag("https://res.cloudinary.com/foenix-coding/image/upload/v1579896321/lasttab_sngc3o.png", class: "tab-image") %>
+            <%= cl_image_tag("https://res.cloudinary.com/foenix-coding/image/upload/v1579896321/lasttab_sngc3o.png", class: "tab-image", alt: "FX ONE socket interface") %>
           </div>
         </div>
 
