--- a/app/views/pages/software.html.erb
+++ b/app/views/pages/software.html.erb
@@ -1,6 +1,6 @@
 <% content_for :meta_title, "#{t('software.first_section_title_one')} | #{t('software.first_section_title_two')}" %>
 <% content_for :meta_description, "#{t('software.first_section_text_two')}" %>
-<% content_for :meta_image, cl_image_path("software-graphic-1_ayt9zv", width: 400) %>
+<% content_for :meta_image, cl_image_path("software-graphic-1_ayt9zv", width: 400, alt: "FX ONE TOUCH controller") %>
 
 <div class="software-wrapper">
   <%= cl_image_tag("bigpill_dhcpkm.png", :quality=>"auto", class: "software-big-pill") %>
@@ -12,8 +12,8 @@
         <p class="responsive-text-small no-margin-mobile p-0"><%= t("software.first_section_text_one") %>: <%= t("software.first_section_text_two") %><br><%= t("software.first_section_text_three") %><br><%= t("software.first_section_text_four") %></p>
       </div>
     </div>
-    <%= cl_image_tag("software-graphic-1_elwb7o.png", class: "first-section-image show-mobile software-graphic-mobile") %>
-    <%= cl_image_tag("software-graphic-1_elwb7o.png", class: "first-section-image hide-mobile", style: "max-width: 800px;") %>
+    <%= cl_image_tag("software-graphic-1_elwb7o.png", class: "first-section-image show-mobile software-graphic-mobile", alt: "FX ONE TOUCH controller") %>
+    <%= cl_image_tag("software-graphic-1_elwb7o.png", class: "first-section-image hide-mobile", style: "max-width: 800px;", alt: "FX ONE TOUCH controller") %>
   </div>
   <div class="software-second-section-wrapper" style="padding-top: 0px;">
     <div class="container">
@@ -87,9 +87,9 @@
     <%= cl_image_tag("software-slant_p9xw4z.png", :quality=>"auto", class: "software-slant hide-mobile") %>
     <%= cl_image_tag("software-mobile-slant_giq09v.png", :quality=>"auto", class: "software-slant show-mobile") %>
     <div class="container">
-      <%= cl_image_tag("software-whole_uv3nvo.png", :quality=>"auto", class: "software-graphic-2 hide-mobile") %>
-      <%= cl_image_tag("software-lhs_qbvtzk.png", :quality=>"auto", class: "software-graphic-2 show-mobile") %>
-      <%= cl_image_tag("software-rhs_k89feh.png", :quality=>"auto", class: "software-graphic-2 show-mobile software-graphic-side") %>
+      <%= cl_image_tag("software-whole_uv3nvo.png", :quality=>"auto", class: "software-graphic-2 hide-mobile", alt: "FX ONE TOUCH controller front and side view") %>
+      <%= cl_image_tag("software-lhs_qbvtzk.png", :quality=>"auto", class: "software-graphic-2 show-mobile", alt: "FX ONE TOUCH controller front and side view") %>
+      <%= cl_image_tag("software-rhs_k89feh.png", :quality=>"auto", class: "software-graphic-2 show-mobile software-graphic-side", alt: "FX ONE TOUCH controller front and side view") %>
       <div class="fxone-fifth-section-content software-fifth-section-content" style="width: 100%; margin: 0px; padding: 64px 10px;">
           <%= cl_image_tag("dots-dots_mwj7rq.png", :quality=>"auto", class: "software-cards-little-pill") %>
           <div class="fxone-fifth-section-left" style="padding: 0px 40px;">
@@ -127,7 +127,7 @@
       <div class="container">
         <div class="inks-section software-third-section-bottom" style="padding: 130px 0px;">
           <div class="inks-first-section-left software-first-section-left no-padding-mobile">
-            <%= cl_image_tag("software-graphic-3_l0wrfp.png", :quality=>"auto", class: "software-graphic about-graphic-two") %>
+            <%= cl_image_tag("software-graphic-3_l0wrfp.png", :quality=>"auto", class: "software-graphic about-graphic-two", alt: "FX ONE TOUCH controller") %>
           </div>
           <div class="inks-first-section-right d-flex justify-content-center" style="padding: 16px 100px 16px 16px;">
             <p class="responsive-text-small"><%= t("software.third_section_final_text") %></p>
