--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -8,12 +8,12 @@
       <h1 class="w-100"><%= t("about.second_section_title") %></h1>
       <p class="responsive-text-small grey w-100"><%= t("about.second_section_text") %><br><br><%= t("about.second_section_text_two") %> <%= t("about.second_section_text_three") %></p>
     </div>
-    <%= cl_image_tag("about-graphic_avvw6d.png", :quality=>"auto", class: "first-section-image", style: "max-width: 800px;") %>
+    <%= cl_image_tag("about-graphic_avvw6d.png", :quality=>"auto", class: "first-section-image", style: "max-width: 800px;", alt: "FX ONE printer information") %>
   </div>
   <div class="about-second-section-wrapper" style="background-color: #F6F7FA;">
-    <%= cl_image_tag("about-little-pill-sliced_z6varw.png", :quality=>"auto", class: "about-little-pill") %>
+    <%= cl_image_tag("about-little-pill-sliced_z6varw.png", :quality=>"auto", class: "about-little-pill", alt: "FX ONE printer information") %>
     <div class="first-section second-about">
-      <%= cl_image_tag("about-graphic-3_y4zb6l.png", :quality=>"auto", class: "first-section-image", style: "max-width: 800px;") %>
+      <%= cl_image_tag("about-graphic-3_y4zb6l.png", :quality=>"auto", class: "first-section-image", style: "max-width: 800px;", alt: "FX ONE printer information") %>
       <div class="first-section-text mobile-center" data-aos="fade-up" data-aos-duration="2000">
         <%= image_tag 'about-icon-1.png', class: 'about-icon' %>
         <h2><%= t("about.first_section_text") %></h2>
@@ -24,7 +24,7 @@
   <div class="about-second-section-wrapper" style="background-image: url('<%= cl_image_path("about-slanted-background_towjgo.png", :quality=>"auto") %>'); background-size: cover;">
     <%= image_tag 'square-dots.png', class: 'about-dots about-dots-section-three' %>
     <div class="first-section second-about">
-      <%= cl_image_tag("about-graphic-4_r5ic34.png", :quality=>"auto", class: "first-section-image", style: "max-width: 800px;") %>
+      <%= cl_image_tag("about-graphic-4_r5ic34.png", :quality=>"auto", class: "first-section-image", style: "max-width: 800px;", alt: "FX ONE printer information") %>
       <div class="first-section-text mobile-center" data-aos="fade-up" data-aos-duration="2000">
         <%= image_tag 'about-icon-3.png', class: 'about-icon' %>
         <h2 class="my-4"><%= t("about.fifth_section_title") %></h2>
