--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 <% content_for :meta_description, "#{t('seo.home_page.description')}" %>
 <div class="home">
   <div class="first-section" style="overflow-x: unset;">
-    <%= cl_image_tag("Foenix-first-section-svg_ykndwi.png", :quality=>"auto", class: "first-section-svg"), "The FX ONE printer" %>
+    <%= cl_image_tag("Foenix-first-section-svg_ykndwi.png", :quality=>"auto", class: "first-section-svg", alt: "The FX ONE printer") %>
     <div class="first-section-text">
       <!-- WEB TITLE -->
       <h1 class="hide-mobile m-0"><%= t("home.title") %></h1>
@@ -17,7 +17,7 @@
         <p><%= t("home.play") %></p>
       </div>
     </div>
-    <%= cl_image_tag("Foenix-machine_iqmh2t.png", class: "first-section-image", style: "max-width: 800px;"), "The FX ONE printer, for all your inudstrial printing needs" %>
+    <%= cl_image_tag("Foenix-machine_iqmh2t.png", class: "first-section-image", style: "max-width: 800px;", alt: "The FX ONE printer, for all your inudstrial printing needs") %>
   </div>
   <div class="second-section">
     <%= cl_image_tag("Foenix-first-section-svg_ykndwi.png", :quality=>"auto", class: "first-section-svg-2") %>
